[package]
name = "yade"
version = "0.1.0"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "Yet Another Derive Error"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lholden/yade"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
synstructure = "0.6.1"

[lib]
proc-macro = true
