[package]
name = "yade"
version = "0.1.2"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "Yet Another Derive Error"
license = "MIT/Apache-2.0"
repository = "https://github.com/lholden/yade"

keywords = ["error", "derive"]
readme = "README.md"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
synstructure = "0.6.1"

[lib]
proc-macro = true
